<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/LocationServiceSwitch"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/ActivityServiceSwitch"
        app:layout_constraintTop_toBottomOf="@+id/ActivityServiceSwitch" />

    <ImageView
        android:id="@+id/imageViewActivity"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/activity_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_error_msg"
        app:srcCompat="@drawable/ic_baseline_directions_walk_24" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/ActivityServiceSwitch"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/imageViewActivity"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/places_icon"
        app:layout_constraintStart_toStartOf="@+id/imageViewActivity"
        app:layout_constraintTop_toBottomOf="@+id/imageViewActivity"
        app:srcCompat="@drawable/ic_baseline_place_24" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/btn_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/til_user_sex"
        app:layout_constraintTop_toBottomOf="@+id/til_user_sex" />

    <EditText
        android:id="@+id/user_age"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/user_age"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/ActivityServiceSwitch"
        app:layout_constraintStart_toEndOf="@+id/ActivityServiceSwitch" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_user_sex"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/user_age"
        app:layout_constraintTop_toBottomOf="@+id/user_age">

        <AutoCompleteTextView
            android:id="@+id/act_user_sex"
            android:layout_width="140dp"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/sex"
            android:inputType="none"
            app:layout_constraintBaseline_toBaselineOf="@+id/LocationServiceSwitch"
            app:layout_constraintStart_toStartOf="@+id/user_age" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/user_age"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_age" />

    <TextView
        android:id="@+id/textViewGroupNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_num"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/LocationServiceSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/til_user_sex" />

    <TextView
        android:id="@+id/tv_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barChart"
        android:layout_width="332dp"
        android:layout_height="325dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_submit"
        app:layout_constraintVertical_bias="0.503" />


</androidx.constraintlayout.widget.ConstraintLayout>